# mutiny-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml
src/: client.rs  context.rs  error.rs  http.rs  lib.rs  main.rs  websocket.rs
src/builders/: create_embed.rs  create_message.rs  create_reply.rs  edit_channel.rs  edit_message.rs  edit_user.rs  fetch_messages.rs  mod.rs
src/context/: messages.rs  mod.rs
src/http/: channels.rs  messages.rs  mod.rs  routing.rs  user.rs  users.rs
src/model/: channel.rs  embed.rs  file.rs  invite.rs  message.rs  mod.rs  permissions.rs  ready.rs  traits.rs  user.rs
