[package]
name = "mutiny-rs"
version = "0.5.1"
edition = "2024"
authors = ["İspik"]
description = "A Rust API wrapper for the Stoat chat platform."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arsabutispik/mutiny-rs"
keywords = ["stoat", "chat", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"
thiserror = "2.0.12"
async-trait = "0.1.88"
moka = { version = "0.12", features = ["future"] }
bitflags = { version = "2.10.0", features = ["serde"]}

[package.metadata.release]
sign-commit = false
sign-tag = false
allow-branch = ["main", "master"]
publish = false

pre-release-hook = ["powershell", "-Command", "git cliff -o CHANGELOG.md --tag {{version}}; git add CHANGELOG.md"]
